force-app/main/default/objects/Enrolment__c.object
<CustomObject>
    <fields>
        <fullName>CourseEnrollmentExId__c</fullName>
        <externalId>true</externalId>
        <label>CourseEnrollmentExId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipName>Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipName>Enrollments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dateCompleted__c</fullName>
        <label>Completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateEnrolled__c</fullName>
        <label>Enrollment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Enrollment_view</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>dateEnrolled__c</columns>
        <columns>status__c</columns>
        <columns>Student__c</columns>
        <columns>dateCompleted__c</columns>
        <filterScope>Mine</filterScope>
        <label>New Enrollment view</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Enrollment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>